# axum-graphql-demo

./: .dockerignore  .env.example  Cargo.toml  Dockerfile
app/: Cargo.toml
app/src/: dtos.rs  errors.rs  graphql.rs  handlers.rs  lib.rs  main.rs  repositories.rs  routes.rs
app/src/dtos/: auth.rs  author.rs  book.rs  global.rs  health.rs  refresh_token.rs  user.rs  users_roles.rs
app/src/dtos/auth/: login_request.rs  login_response.rs  refresh_token_response.rs  register_user_request.rs  register_user_response.rs
app/src/dtos/author/: create_author_request.rs  create_author_response.rs  get_author_loader_response.rs  get_author_response.rs  update_author_request.rs  update_author_response.rs
app/src/dtos/book/: create_book_request.rs  create_book_response.rs  get_book_response.rs  update_book_request.rs  update_book_response.rs
app/src/dtos/refresh_token/: get_refresh_token_request.rs
app/src/dtos/user/: create_user_request.rs
app/src/dtos/users_roles/: assign_role_request.rs
app/src/entities/: authors.rs  books.rs  mod.rs  prelude.rs  refresh_tokens.rs  roles.rs  users.rs  users_roles.rs
app/src/graphql/: mutation.rs  query_root.rs
app/src/handlers/: auth.rs  author.rs  book.rs  graphql.rs  health.rs  refresh_token.rs  role.rs  user.rs  users_roles.rs
app/src/loaders/: book.rs
app/src/repositories/: author.rs  book.rs  refresh_token.rs  role.rs  user.rs  users_roles.rs
app/src/routes/: graphql.rs  health.rs
app/src/utils/: jwt.rs  password.rs
app/src/utils/jwt/: access_token.rs  refresh_token.rs
migration/src/: lib.rs  m20251007_165314_create_authors_table.rs  m20251007_165644_create_books_table.rs  m20251014_131151_create_users_table.rs  m20251014_141128_create_roles_table.rs  m20251014_142953_create_join_table_users_roles.rs  m20251014_152859_create_roles_table_seeder.rs  m20251016_020852_create_refresh_tokens_table.rs
