[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
async-graphql = "7.0.17"
axum = { version = "0.8.6", features = ["macros"] }
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "compression-full", "request-id", "timeout", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
