[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
async-graphql = "7.0.17"
axum = { version = "0.8.6", features = ["macros"] }
hex = "0.4.3"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "compression-full", "request-id", "timeout", "util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v7"] }
